# LLMMM

./: CMakeLists.txt  README.md
examples/: 000.base.cu  000.test.cu  001.vector_addition.cu  002.matrix_transpose.cu  003.matrix_multiplication.cu  004.fp16.mm.cu  004.fp16.mm.cu.backup  004.fp16.mm.ldmatrix.cu  004.fp16.mm.ldmatrix.inner_split.cu  004.fp16.mm.ldmatrix.notrans.cu  004.fp16.mm.ldmatrix.trans.cu  005.fp8.cublas.cu  005.fp8.mm.cu  005.fp8.mm.nosm.cu  005.fp8.mm.opt.cu  005.fp8.test.cu  006.gqa.attention.pytorch.py  006.gqa.nofused.fp16.cu  CMakeLists.txt
src/: CMakeLists.txt  mm.cc  mm.h  mm_impl.h
src/base/: CMakeLists.txt  base.cu  base.h
src/fp16/: CMakeLists.txt  impl.cc  impl.h  mm.cu  mm.cuh  mm.h
src/fp32/: impl.h
src/mm/fp16/: CMakeLists.txt  mm.cu  mm.cuh
src/util/: macro.h  util.cuh  util.h
test/: CMakeLists.txt  fp16_mm_test.cc  kahan.cu  kahan.h  transpose_matrix__aligned_128_test.cc
util/: macro.h  util.cuh  util.h
